k8s/001-setup.yml
apiVersion: v1
kind: Namespace
metadata:
  name: goo-prod
