k8s/002-goo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goo
  namespace: goo-prod
  labels: { app: goo }
spec:
  replicas: 1
  selector:
    matchLabels: { app: goo }
  template:
    metadata:
      labels: { app: goo }
    spec:
      containers:
        - name: goo
          image: ghcr.io/ogrodje/goo:0.0.6
          ports: [ { containerPort: 7777 } ]

          volumeMounts:
            - name: playwright-cache
              mountPath: /root/.cache/ms-playwright
          livenessProbe:
            httpGet:
              path: /
              port: 7777
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 7777
            initialDelaySeconds: 20
            periodSeconds: 50

      volumes:
        - name: playwright-cache
          persistentVolumeClaim:
            claimName: playwright-cache-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: goo-service
  namespace: goo-prod
spec:
  selector:
    app: goo
  ports:
    - port: 80
      targetPort: 7777
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goo-short-ingress
  namespace: goo-prod
  labels:
    version: "1"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: goo.ogrodje.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goo-service
                port:
                  number: 80
